--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Synced from GNULIB.
+
 2020-07-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.h: Synced from GNULIB.
