--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,8 @@
+2020-09-15         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+	* gawk.1: Updated.
+
 2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Updated.
