Update support files from GNULIB.

--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,8 @@
+2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* cdefs.h, dfa.c, intprops.h, regcomp.c, regex.h, regex_internal.h,
+	verify.h: Synced from GNULIB.
+
 2020-09-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Synced from GNULIB.
