Minor doc updates.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Minor fixes. Thanks to Antonio Columbo for
+	bringing them to my attention.
+
 2020-09-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Egrep Program): Improve to be POSIX compliant.
