--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -25693,7 +25693,7 @@ and then a @code{usage()} function:
 # Options:
 #   -G Output all group ids as space separated numbers (ruid, euid, groups)
 #   -g Output only the euid as a number
-#   -n Ouput name instead of the numeric value (with -g/-G/-u)
+#   -n Output name instead of the numeric value (with -g/-G/-u)
 #   -r Output ruid/rguid instead of effective id
 #   -u Output only effective user id, as a number
 
@@ -26549,7 +26549,7 @@ global variables with a leading capital letter.  Doing that would
 make the program a little easier to follow.
 
 @ifset FOR_PRINT
-@cindex Kernighan, Brian
+@cindex Kernighan, Brian @subentry quotes
 The logic for choosing which lines to print represents a @dfn{state
 machine}, which is ``a device which can be in one of a set number
 of stable conditions depending on its previous condition and on the
@@ -28671,7 +28671,7 @@ Fix this problem.
 without relying on @code{ord()} and @code{chr()}.)
 
 @item
-@cindex Kernighan, Brian
+@cindex Kernighan, Brian @subentry quotes
 In @file{uniq.awk} (@pxref{Uniq Program}, the
 logic for choosing which lines to print represents a @dfn{state
 machine}, which is ``a device which can be in one of a set number of stable
