Fix a spelling error in the manual.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Fix a spelling error.
+
 2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Minor fixes. Thanks to Antonio Columbo for
