--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,6 +1,8 @@
 2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Fix a spelling error.
+	* wordlist, wordlist2, wordlist3: Remove words that spell
+	now recognizes as real words.
 
 2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
