Fix typo in gawkinet.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,7 @@
 	* gawktexi.in: Fix a spelling error.
 	* wordlist, wordlist2, wordlist3: Remove words that spell
 	now recognizes as real words.
+	* gawkinet.texi: Fix a spelling error.
 
 2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
