--- a/doc/gawkinet.texi
+++ b/doc/gawkinet.texi
@@ -3507,7 +3507,7 @@ takes part in migration has to be an element of this array.
 
 Now it's clear what happens to the @code{Label} parameter of the
 function @code{migrate()}. It is copied into @code{MOBVAR["Label"]} and
-travels alongside the other data. Since travelling takes place via HTTP,
+travels alongside the other data. Since traveling takes place via HTTP,
 records must be separated with @code{"\r\n"} in @code{RS} and
 @code{ORS} as usual. The code assembly for migration takes place in
 three steps:
