Add spell checking for gawkinet.texi.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -4,6 +4,8 @@
 	* wordlist, wordlist2, wordlist3: Remove words that spell
 	now recognizes as real words.
 	* gawkinet.texi: Fix a spelling error.
+	* Makefile.am (spellinet): New target.
+	* wordlist4: New file.
 
 2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
