--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c, dfa.h: Synced from GNULIB.
+
 2020-09-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* cdefs.h, dfa.c, intprops.h, regcomp.c, regex.h, regex_internal.h,
