Sync dfa.c from GNULIB.

--- a/support/ChangeLog
+++ b/support/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Synced from GNULIB.
+
 2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c, dfa.h: Synced from GNULIB.
