Rewrite split program.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in (Split Program): Rewrite split to be POSIX
+	compliant. Update all the prose.
+	* wordlist: Update.
+
 2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Fix a spelling error.
