--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-10-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Minor edits.
+
 2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Split Program): Rewrite split to be POSIX
