Update wc example to modern POSIX.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -2,6 +2,11 @@
 
 	* gawktexi.in: Minor edits.
 
+	Unrelated:
+
+	* gawktexi (Wc Program): Update to POSIX, support both bytes
+	and characters via the gawkextlib mbs extension.
+
 2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Split Program): Rewrite split to be POSIX
