--- a/build-aux/ChangeLog
+++ b/build-aux/ChangeLog
@@ -1,3 +1,7 @@
+2020-10-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* config.sub: Updated from GNULIB.
+
 2020-09-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess: Updated from GNULIB.
