--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,12 @@ Changes from 5.1.0 to 5.1.1
    that functions are presented in a reasonable order with respect
    to the namespaces that contain them.
 
+9. Several example programs in the manual have been updated to their
+   modern POSIX equivalents.
+
+xx. There have been numerous minor code cleanups and bug fixes. See the
+    ChangeLog for details.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
