Small doc edit.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2020-10-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Minor edit related to compatiblity mode and
+	unknown options. Thanks to Arkadiusz Drabczyk <arkadiusz@drabczyk.org>
+	for raising the issue.
+
 2020-10-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Minor edits.
