--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -4343,7 +4343,8 @@ Any command-line arguments following @code{--} are placed in @code{ARGV},
 even if they start with a minus sign.
 @end table
 
-As long as program text has been supplied,
+In compatibility mode,
+as long as program text has been supplied,
 any other options are flagged as invalid with a warning message but
 are otherwise ignored.
 
