Remove racy test from iolint.awk.

--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2020-10-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* iolint.awk, iolint.ok: Remove |& test to cat. It was
+	inherently racy.
+
 2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* iolint.awk, iolint.ok: Adjust output to cat for exit status
