More doc fixes.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,11 @@
 	* gawktexi.in: Minor edit related to compatiblity mode and
 	unknown options. Thanks to Arkadiusz Drabczyk <arkadiusz@drabczyk.org>
 	for raising the issue.
+	
+	Unrelated:
+
+	* gawktexi.in: A number of small fixes, mostly thanks to
+	Antonio Columbo.
 
 2020-10-04         Arnold D. Robbins     <arnold@skeeve.com>
 
